Add module descriptions

--- a/_modules/er-101.md
+++ b/_modules/er-101.md
@@ -1,10 +1,48 @@
 ---
-layout: default
+layout: module
 code: ER-101
-name: Indexed Sequencer
+name: Indexed Quad Sequencer
 image: images/ER-101-original-flavor.png
 ---
 
-![page.code]({{ page.image | relative_url }})
+## {{ page.code }}: {{ page.name }}
 
-This is a test module.
+The ER-101 is a real-time composition, sequencing and automation environment, all in 26HP. It enables you to compose sequences of thousands of steps with variable duration, variable gate length, arbitrary scales, smooth transitions, save/recall device state and much more. 
+
+### Highlights
+* 4-track sequencer
+* stepped and smooth voltage transitions
+* each track has 3 outputs: 2 CVs + 1 gate
+* each track has its own adjustable loop points 
+* each track contains up to 100 patterns  and each pattern can contain up to 100 steps
+* each step can be individually adjusted to have 0-99 clock cycles in duration
+* each gate can be individually adjusted to have 0-99 clock cycles in duration with or without ratcheting
+* configure each track to output gates or triggers 
+* configure each track to have its own clock multiplier (1x to 99x)
+* CVs are chosen (indexed) from voltage tables of which there are 2 per track (A & B)
+* 8 built-in and 8 user reference voltage tables for initializing the track tables
+* voltage tables are user-editable and have 100 entries per table
+* voltages between 0.000-8.192V at 2mV increments can be dialed in 
+* each voltage table can be configured to use note display or numeric display
+* smoothing can be enabled for individual steps, entire patterns and/or entire tracks 
+* smoothed transitions are NOT simply slews but are adjusted to match the current tempo in real-time
+* hold feature (complete double-buffering of device state) allows you to edit-and-commit on the beat while the sequencer is running 
+* while in hold mode, committing changes to a running sequence can be either immediate or quantized to the beat
+* reset can be either immediate or quantized to coincide to with the ending of the current track, pattern, or step
+* stores up to 16 snapshots of the state of the entire device
+* arbitrary insert/delete of patterns/steps with clipboard style copy/paste 
+* math button allows you to specify a mathematical operation to apply to a step, a pattern or a track.
+* note repeat (aka ratchet) any step
+* shuffle (aka swing) any step
+* expansion port 
+* last saved snapshot is loaded automatically on power-up
+* firmware upgradeable via USB
+* expander available: [ER-102]({{site.baseurl}}{% link _modules/er-102.md %})
+
+### Specifications
+* Width: 26hp 
+* Depth: 30mm from the back of the faceplate including the ribbon cable
+* Current Consumption: 
+(There is a switch on the back that lets you choose the +5V source.)
+  * If +5V source is internal REGulator then approx 120mA from +12V.
+  * If +5V source is the BUS then approx 95mA from +5V and 25mA from +12V.
