--- a/_modules/er-102.md
+++ b/_modules/er-102.md
@@ -1,9 +1,31 @@
 ---
-layout: default
+layout: module
 code: ER-102
 name: Sequencer Controller
 image: images/ER-102-original-flavor.jpg
 ---
-![page.code]({{ page.image | relative_url }})
 
-This is a test module.
+## {{ page.code }}: {{ page.name }}
+
+The ER-102 is an expander for the [ER-101]({{site.baseurl}}{% link _modules/er-101.md %}).
+
+### Highlights
+- up to 99 parts (each with its own reset step and looped section) per snapshot
+- part selection/activation is under CV/gate control
+- various part transition behaviors
+- up to 16 groups of steps per snapshot
+- perform operations on groups of steps
+- assign steps to groups with Euclidean masks
+- route 3 channels of CV/gate modulation to steps via groups
+- new invert and rotate operations
+- step record (a.k.a. remote control)
+- real-time record with pass-thru during rehearsing and recording
+- alter record (a.k.a. real-time overdub)
+- essentially infinite storage via uSD card
+- firmware upgradeable via uSD card
+- and much more!
+
+### Specifications
+* Width: 14hp 
+* Depth: 35mm from the back of the faceplate including the ribbon cable
+* Current Consumption: max 80mA from +12V only
