--- a/_modules/er-301.md
+++ b/_modules/er-301.md
@@ -1,9 +1,18 @@
 ---
-layout: default
+layout: module
 code: ER-301
 name: Sound Computer
 image: images/ER-301-original-flavor.png
 ---
-![page.code]({{ page.image | relative_url }})
 
-This is a test module.
+## {{ page.code }}: {{ page.name }}
+
+The ER-301 is a voltage-controllable canvas for digital signal processing algorithms.  One of the many characteristics that attracted me to modular synthesizers is that they enabled me to make the kind of music that I love away from the computer.  However, not all digital audio tools can be elegantly and efficiently realized in a dedicated hardware form.  So, I either had to deny myself those tools, or, go to the computer. 
+
+### Highlights
+* 
+
+### Specifications
+* Width: 30hp 
+* Depth: 35mm from the back of the faceplate including the ribbon cable
+* [Current Consumption](http://wiki.orthogonaldevices.com/index.php/ER-301/Power): (+12V/-12V/+5V) 250mA/30mA/0mA
