--- a/_modules/er-101.md
+++ b/_modules/er-101.md
@@ -3,6 +3,7 @@ layout: module
 code: ER-101
 name: Indexed Quad Sequencer
 image: images/ER-101-original-flavor.png
+image_link: zooms/er-101.html
 ---
 
 ## {{ page.code }}: {{ page.name }}
