--- a/_modules/er-102.md
+++ b/_modules/er-102.md
@@ -3,6 +3,7 @@ layout: module
 code: ER-102
 name: Sequencer Controller
 image: images/ER-102-original-flavor.jpg
+image_link: zooms/er-102.html
 ---
 
 ## {{ page.code }}: {{ page.name }}
