--- a/_modules/er-301.md
+++ b/_modules/er-301.md
@@ -3,6 +3,7 @@ layout: module
 code: ER-301
 name: Sound Computer
 image: images/ER-301-original-flavor.png
+image_link: zooms/er-301.html
 ---
 
 ## {{ page.code }}: {{ page.name }}
