Add doc and changelog links

--- a/_modules/er-301.md
+++ b/_modules/er-301.md
@@ -4,9 +4,9 @@ code: ER-301
 name: Sound Computer
 image: images/ER-301-original-flavor.png
 image_link: zooms/er-301.html
+changelog: https://github.com/odevices/er-301/blob/main/CHANGELOG.md
+docs: https://github.com/odevices/docs/er-301
 ---
-
-## {{ page.code }}: {{ page.name }}
 
 The ER-301 is a voltage-controllable canvas for digital signal processing algorithms.  One of the many characteristics that attracted me to modular synthesizers is that they enabled me to make the kind of music that I love away from the computer.  However, not all digital audio tools can be elegantly and efficiently realized in a dedicated hardware form.  So, I either had to deny myself those tools, or, go to the computer. 
 
