--- a/_modules/er-102.md
+++ b/_modules/er-102.md
@@ -4,9 +4,9 @@ code: ER-102
 name: Sequencer Controller
 image: images/ER-102-original-flavor.jpg
 image_link: zooms/er-102.html
+changelog: https://github.com/odevices/er-102/blob/main/CHANGELOG.md
+docs: https://github.com/odevices/docs/er-102
 ---
-
-## {{ page.code }}: {{ page.name }}
 
 The ER-102 is an expander for the [ER-101]({{site.baseurl}}{% link _modules/er-101.md %}).
 
