--- a/_modules/er-102.md
+++ b/_modules/er-102.md
@@ -1,11 +1,11 @@
 ---
 layout: module
-code: ER-102
+title: ER-102
 name: Sequencer Controller
 image: images/ER-102-original-flavor.jpg
 image_link: zooms/er-102.html
 changelog: https://github.com/odevices/er-102/blob/main/CHANGELOG.md
-docs: https://github.com/odevices/docs/er-102
+docs: https://odevices.github.io/docs/er-102
 ---
 
 The ER-102 is an expander for the [ER-101]({{site.baseurl}}{% link _modules/er-101.md %}).
@@ -30,3 +30,5 @@ The ER-102 is an expander for the [ER-101]({{site.baseurl}}{% link _modules/er-1
 * Width: 14hp 
 * Depth: 35mm from the back of the faceplate including the ribbon cable
 * Current Consumption: max 80mA from +12V only
+
+<a href="/images/er-101-102-nostalgia-peek.jpg"><img src="/images/er-101-102-nostalgia-peek.jpg" style="cursor: zoom-in;"></a>
