--- a/_zooms/er-101.md
+++ b/_zooms/er-101.md
@@ -1,6 +1,6 @@
 ---
 layout: module-zoom
-code: ER-101
+title: ER-101
 name: Indexed Quad Sequencer
 image: images/large/ER-101-original-flavor.jpg
 image_link: modules/er-101.html
