--- a/_zooms/er-301.md
+++ b/_zooms/er-301.md
@@ -1,6 +1,6 @@
 ---
 layout: module
-code: ER-301
+title: ER-301
 name: Sound Computer
 image: images/large/ER-301-original-flavor.jpg
 image_link: modules/er-301.html
