--- a/_modules/er-301.md
+++ b/_modules/er-301.md
@@ -1,11 +1,12 @@
 ---
 layout: module
-code: ER-301
+title: ER-301
 name: Sound Computer
 image: images/ER-301-original-flavor.png
 image_link: zooms/er-301.html
-changelog: https://github.com/odevices/er-301/blob/main/CHANGELOG.md
-docs: https://github.com/odevices/docs/er-301
+changelog: https://github.com/odevices/er-301/blob/master/CHANGELOG.md
+docs: https://odevices.github.io/docs/er-301
+firmware: https://github.com/odevices/er-301/releases
 ---
 
 The ER-301 is a voltage-controllable canvas for digital signal processing algorithms.  One of the many characteristics that attracted me to modular synthesizers is that they enabled me to make the kind of music that I love away from the computer.  However, not all digital audio tools can be elegantly and efficiently realized in a dedicated hardware form.  So, I either had to deny myself those tools, or, go to the computer. 
@@ -17,3 +18,8 @@ The ER-301 is a voltage-controllable canvas for digital signal processing algori
 * Width: 30hp 
 * Depth: 35mm from the back of the faceplate including the ribbon cable
 * [Current Consumption](http://wiki.orthogonaldevices.com/index.php/ER-301/Power): (+12V/-12V/+5V) 250mA/30mA/0mA
+
+### :warning: Read this before you purchase :warning:
+* Firmware is still under heavy development which means frequent updates and bugs.  The good news is that typically any bugs found are fixed within a few days.
+* No traditional manual.  There is a wiki with lots of documentation but it falls quickly behind development.  The forum is usually the best place to get answers these days.
+* All 4 outputs are AC-coupled, therefore, no CV output.
