--- a/_zooms/er-102.md
+++ b/_zooms/er-102.md
@@ -1,6 +1,6 @@
 ---
 layout: module-zoom
-code: ER-102
+title: ER-102
 name: Sequencer Controller
 image: images/large/ER-102-original-flavor.jpg
 image_link: modules/er-102.html
