Replace links to odevices.github.io

--- a/_modules/er-102.md
+++ b/_modules/er-102.md
@@ -5,7 +5,7 @@ name: Sequencer Controller
 image: images/er-102-original-flavor.jpg
 image_link: zooms/er-102.html
 changelog: https://github.com/odevices/er-102/blob/main/CHANGELOG.md
-docs: https://odevices.github.io/docs/er-102
+docs: https://www.orthogonaldevices.com/docs/er-102
 ---
 
 The ER-102 is an expander for the [ER-101]({{site.baseurl}}{% link _modules/er-101.md %}).
