--- a/_modules/er-301.md
+++ b/_modules/er-301.md
@@ -5,7 +5,7 @@ name: Sound Computer
 image: images/er-301-original-flavor.png
 image_link: zooms/er-301.html
 changelog: https://github.com/odevices/er-301/blob/master/CHANGELOG.md
-docs: https://odevices.github.io/docs/er-301
+docs: https://www.orthogonaldevices.com/docs/er-301
 firmware: https://github.com/odevices/er-301/releases
 ---
 
