--- a/_modules/er-101.md
+++ b/_modules/er-101.md
@@ -5,7 +5,7 @@ name: Indexed Quad Sequencer
 image: images/er-101-original-flavor.png
 image_link: zooms/er-101.html
 changelog: https://github.com/odevices/er-101/blob/main/CHANGELOG.md
-docs: https://www.orthogonaldevices.com/docs/er-101
+docs: https://docs.orthogonaldevices.com/er-101
 ---
 
 The ER-101 is a real-time composition, sequencing and automation environment, all in 26HP. It enables you to compose sequences of thousands of steps with variable duration, variable gate length, arbitrary scales, smooth transitions, save/recall device state and much more. 
