Improve compatibility with URLs from old site

--- a/er-301.md
+++ b/er-301.md
@@ -1,7 +1,7 @@
 ---
 layout: module
 title: ER-301
-name: Sound Computer
+subtitle: Sound Computer
 image: images/er-301-original-flavor.png
 image_link: zooms/er-301.html
 changelog: https://github.com/odevices/er-301/blob/master/CHANGELOG.md
