--- a/er-101.md
+++ b/er-101.md
@@ -1,7 +1,7 @@
 ---
 layout: module
 title: ER-101
-name: Indexed Quad Sequencer
+subtitle: Indexed Quad Sequencer
 image: images/er-101-original-flavor.png
 image_link: zooms/er-101.html
 changelog: https://github.com/odevices/er-101/blob/main/CHANGELOG.md
@@ -38,7 +38,7 @@ The ER-101 is a real-time composition, sequencing and automation environment, al
 * expansion port 
 * last saved snapshot is loaded automatically on power-up
 * firmware upgradeable via USB
-* expander available: [ER-102]({{site.baseurl}}{% link _modules/er-102.md %})
+* expander available: [ER-102]({{site.baseurl}}{% link er-102.md %})
 
 ### Specifications
 * Width: 26hp 
