--- a/er-102.md
+++ b/er-102.md
@@ -1,14 +1,14 @@
 ---
 layout: module
 title: ER-102
-name: Sequencer Controller
+subtitle: Sequencer Controller
 image: images/er-102-original-flavor.jpg
 image_link: zooms/er-102.html
 changelog: https://github.com/odevices/er-102/blob/main/CHANGELOG.md
 docs: https://docs.orthogonaldevices.com/er-102
 ---
 
-The ER-102 is an expander for the [ER-101]({{site.baseurl}}{% link _modules/er-101.md %}).
+The ER-102 is an expander for the [ER-101]({{site.baseurl}}{% link er-101.md %}).
 
 ### Highlights
 - up to 99 parts (each with its own reset step and looped section) per snapshot
