Fix more broken links

--- a/er-102.md
+++ b/er-102.md
@@ -5,6 +5,7 @@ subtitle: Sequencer Controller
 image: images/er-102-original-flavor.jpg
 image_link: zooms/er-102.html
 changelog: https://github.com/odevices/er-102/blob/main/CHANGELOG.md
+firmware: https://github.com/odevices/er-102/releases
 docs: https://docs.orthogonaldevices.com/er-102
 ---
 
