--- a/er-101.md
+++ b/er-101.md
@@ -6,6 +6,7 @@ image: images/er-101-original-flavor.png
 image_link: zooms/er-101.html
 changelog: https://github.com/odevices/er-101/blob/main/CHANGELOG.md
 docs: https://docs.orthogonaldevices.com/er-101
+firmware: https://github.com/odevices/er-101/releases
 ---
 
 The ER-101 is a real-time composition, sequencing and automation environment, all in 26HP. It enables you to compose sequences of thousands of steps with variable duration, variable gate length, arbitrary scales, smooth transitions, save/recall device state and much more. 
