--- a/er-301.md
+++ b/er-301.md
@@ -12,7 +12,17 @@ firmware: https://github.com/odevices/er-301/releases
 The ER-301 is a voltage-controllable canvas for digital signal processing algorithms.  One of the many characteristics that attracted me to modular synthesizers is that they enabled me to make the kind of music that I love away from the computer.  However, not all digital audio tools can be elegantly and efficiently realized in a dedicated hardware form.  So, I either had to deny myself those tools, or, go to the computer. 
 
 ### Highlights
-* 
+* Live virtual patch creation without stopping the audio.
+* A core library of patchable units covering various functions from the simple (mixing, VCA, envelope generation, limiting, etc.) to the complex (granular synthesis, variable-rate sample playback, wavetable oscillator, etc.)
+* Package Manager for easy sharing of patches, presets, and custom units.
+* There is a growing collection of user-developed units.
+* The firmware and SDK are open-sourced on GitHub.  Users can develop their own units using the mid-level (Lua) SDK for maximum patching flexibility, or, using the low-level (C++) SDK for additional performance and custom graphics.
+* 2 monochrome OLED displays where the smaller display shows additional context for the focused element in the main display.
+* The main knob is a high-quality optical encoder rated to over 1 million rotations.
+* 4x audio (AC-coupled) outputs configurable to 48kHz or 96kHz at 24-bit.
+* 4x audio (DC-coupled) inputs sampled up to 60kHz at 16-bit depth.
+* 12x CV (DC-coupled) inputs sampled up to 60kHz at 16-bit depth.
+* 4x gate (DC-coupled) inputs sampled up to 96kHz at 12-bit depth.
 
 ### Specifications
 * Width: 30hp 
@@ -21,5 +31,5 @@ The ER-301 is a voltage-controllable canvas for digital signal processing algori
 
 ### :warning: Read this before you purchase :warning:
 * Firmware is still under heavy development which means frequent updates and bugs.  The good news is that typically any bugs found are fixed within a few days.
-* No traditional manual.  There is a wiki with lots of documentation but it falls quickly behind development.  The forum is usually the best place to get answers these days.
-* All 4 outputs are AC-coupled, therefore, no CV output.
+* The documentation is always lagging behind the firmware development.  The forum is usually the best place to get answers these days.
+* All 4 outputs are AC-coupled, therefore, no CV output.  (Gasp!  The horror!)  This is a purposeful design decision to focus the ER-301 on sound generation.  If you think even 10-minutes about what a modulation computer would look like, I think you would agree that it is not the ER-301. :wink:
