Add more detail to ER-301

--- a/er-301.md
+++ b/er-301.md
@@ -13,21 +13,24 @@ The ER-301 is a voltage-controllable canvas for digital signal processing algori
 
 ### Highlights
 * Live virtual patch creation without stopping the audio.
-* A core library of patchable units covering various functions from the simple (mixing, VCA, envelope generation, limiting, etc.) to the complex (granular synthesis, variable-rate sample playback, wavetable oscillator, etc.)
-* Package Manager for easy sharing of patches, presets, and custom units.
+* A core library of patchable units covering various functions from the simple (mixing, VCA, envelope generation, limiting, filtering, etc.) to the complex (loopers, granular synthesis, variable-rate sample playback, wavetable oscillator, etc.)
+* 512MB of RAM, with about 480MB available for memory-resident samples.  All memory-resident samples are converted to 32-bit (float) but keep their original sample rate.
+* Loads samples of any sample rate and bit depth (as long as they are WAV files).
+* Records up to 12 tracks of audio/CV to the SD card **in the background**.
+* Package Manager for easy sharing of patches, presets, custom units, and third party libraries.
 * There is a growing collection of user-developed units.
 * The firmware and SDK are open-sourced on GitHub.  Users can develop their own units using the mid-level (Lua) SDK for maximum patching flexibility, or, using the low-level (C++) SDK for additional performance and custom graphics.
+
+### Specifications
+* Width: 30hp 
+* Depth: 35mm from the back of the faceplate including the ribbon cable
+* [Current Consumption](http://wiki.orthogonaldevices.com/index.php/ER-301/Power): (+12V/-12V/+5V) 250mA/30mA/0mA
 * 2 monochrome OLED displays where the smaller display shows additional context for the focused element in the main display.
 * The main knob is a high-quality optical encoder rated to over 1 million rotations.
 * 4x audio (AC-coupled) outputs configurable to 48kHz or 96kHz at 24-bit.
 * 4x audio (DC-coupled) inputs sampled up to 60kHz at 16-bit depth.
 * 12x CV (DC-coupled) inputs sampled up to 60kHz at 16-bit depth.
 * 4x gate (DC-coupled) inputs sampled up to 96kHz at 12-bit depth.
-
-### Specifications
-* Width: 30hp 
-* Depth: 35mm from the back of the faceplate including the ribbon cable
-* [Current Consumption](http://wiki.orthogonaldevices.com/index.php/ER-301/Power): (+12V/-12V/+5V) 250mA/30mA/0mA
 
 ### :warning: Read this before you purchase :warning:
 * Firmware is still under heavy development which means frequent updates and bugs.  The good news is that typically any bugs found are fixed within a few days.
