Fix broken links

--- a/_zooms/er-101.md
+++ b/_zooms/er-101.md
@@ -1,9 +1,9 @@
 ---
 layout: module-zoom
 title: ER-101
-name: Indexed Quad Sequencer
+subtitle: Indexed Quad Sequencer
 image: images/large/ER-101-original-flavor.jpg
-image_link: modules/er-101.html
+image_link: /er-101
 ---
 
 
