--- a/_zooms/er-102.md
+++ b/_zooms/er-102.md
@@ -1,8 +1,8 @@
 ---
 layout: module-zoom
 title: ER-102
-name: Sequencer Controller
+subtitle: Sequencer Controller
 image: images/large/ER-102-original-flavor.jpg
-image_link: modules/er-102.html
+image_link: /er-102
 ---
 
