--- a/_zooms/er-301.md
+++ b/_zooms/er-301.md
@@ -1,7 +1,7 @@
 ---
-layout: module
+layout: module-zoom
 title: ER-301
-name: Sound Computer
+subtitle: Sound Computer
 image: images/large/ER-301-original-flavor.jpg
-image_link: modules/er-301.html
+image_link: /er-301
 ---
